<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SegundoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroupCapitales"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButtonParis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paris" />

                <RadioButton
                    android:id="@+id/radioButtonMadrid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/madrid" />

                <RadioButton
                    android:id="@+id/radioButtonRoma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/roma" />

                <RadioButton
                    android:id="@+id/radioButtonMoscu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moscu" />

                <RadioButton
                    android:id="@+id/radioButtonBerlin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/berlin" />

                <RadioButton
                    android:id="@+id/radioButtonBrasilia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/brasilia" />

                <RadioButton
                    android:id="@+id/radioButtonLisboa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lisboa" />

                <RadioButton
                    android:id="@+id/radioButtonTokio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tokio" />

                <RadioButton
                    android:id="@+id/radioButtonNuevaDelhi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delhi" />

                <RadioButton
                    android:id="@+id/radioButtonPekin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pekin" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>