<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SeleccionandoImagenes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/buttonTulipan"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/btnTulipan" />

        <Button
            android:id="@+id/buttonRosa"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="onClick"
            android:text="@string/btnRosa" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/buttonAzahar"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:onClick="onClick"
            android:text="@string/btnAzahar" />

        <Button
            android:id="@+id/buttonCerezo"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:onClick="onClick"
            android:text="@string/btnCerezo" />
    </LinearLayout>
</LinearLayout>