<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/juegoAciertos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".JuegoDeAciertos">

    <TextView
        android:id="@+id/textViewPaises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/paises"
        android:textSize="24sp" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.alvar.practica4pmdm.UnoFragment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textViewCapitales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/capitales"
        android:textSize="24sp" />

    <fragment
        android:id="@+id/fragment2"
        android:name="com.alvar.practica4pmdm.SegundoFragment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewCapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonVerificar"
        style="@style/BtnMatchWrap"
        android:layout_marginBottom="10dp"
        android:text="@string/btnVerificar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAcierto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/acierto" />

        <ImageView
            android:id="@+id/imageViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible"
            app:srcCompat="@drawable/error" />
    </LinearLayout>
</LinearLayout>